[gd_scene load_steps=16 format=3 uid="uid://dcsppd0rxf7n8"]

[ext_resource type="Script" path="res://scripts/menu/combat/combat.gd" id="1_bdjml"]
[ext_resource type="Texture2D" uid="uid://bv3cm6bd7766o" path="res://assests/images/combat/bilel/bilel.png" id="1_e4p7i"]
[ext_resource type="Theme" uid="uid://bcjm1ucnctuac" path="res://assests/ui/fonts/normal_size_text.tres" id="2_mbdq8"]
[ext_resource type="Texture2D" uid="uid://qmt48r2hfddx" path="res://assests/images/combat/bilel/missingno.png" id="3_c60pb"]
[ext_resource type="Theme" uid="uid://dfugkqc28o7wv" path="res://assests/ui/fonts/reduced_size_text.tres" id="5_wgptg"]
[ext_resource type="Texture2D" uid="uid://d3psxgtwaeqfc" path="res://assests/ui/combat/hp_bar_empty.png" id="6_et5yw"]
[ext_resource type="Texture2D" uid="uid://cnlyi8gl4rqy4" path="res://assests/ui/combat/hp_bar_full.png" id="7_cqw2l"]
[ext_resource type="Texture2D" uid="uid://d1ld12kb58d6p" path="res://assests/ui/combat/sp_bar_empty.png" id="8_o6e83"]
[ext_resource type="Texture2D" uid="uid://c587n8blubpct" path="res://assests/ui/combat/sp_bar_full.png" id="9_1bu58"]
[ext_resource type="Texture2D" uid="uid://dvcc5aeoldxj7" path="res://assests/ui/buttons/xbox_controller_a.png" id="10_l3amx"]
[ext_resource type="Texture2D" uid="uid://bgktmsv0ix7vq" path="res://assests/ui/buttons/xbox_controller_b.png" id="11_7xv3a"]
[ext_resource type="Texture2D" uid="uid://c8udvyhisafod" path="res://assests/ui/buttons/xbox_controller_x.png" id="12_x522l"]
[ext_resource type="Texture2D" uid="uid://dq4slh841f2dl" path="res://assests/ui/buttons/xbox_controller_y.png" id="13_huqvv"]

[sub_resource type="Animation" id="Animation_rmwwb"]
resource_name = "in"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PersonaButton:polygon")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(126, 168, 126, 168, 126, 168), PackedVector2Array(126, 168, 169, 143, 204, 160)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemsButton:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(118, 181, 118, 181, 118, 181), PackedVector2Array(118, 181, 171, 167, 174, 186)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GuardButton:polygon")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(126, 195, 126, 195, 126, 195), PackedVector2Array(126, 195, 207, 189, 203, 213)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AttackButton:polygon")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [PackedVector2Array(118, 204, 118, 204, 118, 204), PackedVector2Array(118, 204, 187, 213, 163, 235)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PersonaButton/RichTextLabel:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ItemsButton/RichTextLabel:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("GuardButton/RichTextLabel:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("AttackButton/RichTextLabel:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PersonaButton/XboxControllerY:self_modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("ItemsButton/XboxControllerX:self_modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("GuardButton/XboxControllerB:self_modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("AttackButton/XboxControllerA:self_modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_venrj"]
_data = {
"in": SubResource("Animation_rmwwb")
}

[node name="Combat" type="Node2D"]
texture_filter = 1
script = ExtResource("1_bdjml")

[node name="Backgroud" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 270.0
color = Color(0, 0.501961, 0.172549, 1)

[node name="PlayerPosition" type="Marker2D" parent="."]
position = Vector2(87, 153)

[node name="EnemyPosition" type="Marker2D" parent="."]
position = Vector2(348, 54)

[node name="Bilel" type="Sprite2D" parent="."]
position = Vector2(87, 153)
texture = ExtResource("1_e4p7i")
centered = false

[node name="Missingno" type="Sprite2D" parent="."]
position = Vector2(348, 54)
texture = ExtResource("3_c60pb")
centered = false

[node name="TopInfos" type="ColorRect" parent="."]
offset_right = 480.0
offset_bottom = 19.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="RichTextLabel" type="RichTextLabel" parent="TopInfos"]
layout_mode = 0
offset_left = 6.0
offset_top = 2.0
offset_right = 105.0
offset_bottom = 15.0
theme = ExtResource("2_mbdq8")
text = "Player turn"
metadata/_edit_use_anchors_ = true

[node name="SelectedPlayerButtons" type="Marker2D" parent="."]
position = Vector2(87, 153)

[node name="PersonaButton" type="Polygon2D" parent="SelectedPlayerButtons"]
position = Vector2(-87, -153)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(126, 168, 169, 143, 204, 160)

[node name="XboxControllerY" type="Sprite2D" parent="SelectedPlayerButtons/PersonaButton"]
position = Vector2(131, 160)
texture = ExtResource("13_huqvv")
centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="SelectedPlayerButtons/PersonaButton"]
offset_left = 151.0
offset_top = 148.0
offset_right = 212.0
offset_bottom = 163.0
theme = ExtResource("2_mbdq8")
text = "Persona"

[node name="ItemsButton" type="Polygon2D" parent="SelectedPlayerButtons"]
position = Vector2(-87, -153)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(118, 181, 171, 167, 174, 186)

[node name="XboxControllerX" type="Sprite2D" parent="SelectedPlayerButtons/ItemsButton"]
position = Vector2(120, 174)
texture = ExtResource("12_x522l")
centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="SelectedPlayerButtons/ItemsButton"]
offset_left = 138.0
offset_top = 170.0
offset_right = 199.0
offset_bottom = 185.0
theme = ExtResource("2_mbdq8")
text = "Objets"

[node name="GuardButton" type="Polygon2D" parent="SelectedPlayerButtons"]
position = Vector2(-87, -153)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(126, 195, 207, 189, 203, 213)

[node name="XboxControllerB" type="Sprite2D" parent="SelectedPlayerButtons/GuardButton"]
position = Vector2(133, 191)
texture = ExtResource("11_7xv3a")
centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="SelectedPlayerButtons/GuardButton"]
offset_left = 149.0
offset_top = 190.0
offset_right = 204.0
offset_bottom = 205.0
theme = ExtResource("2_mbdq8")
text = "S'd√©fendre"
scroll_active = false
shortcut_keys_enabled = false

[node name="AttackButton" type="Polygon2D" parent="SelectedPlayerButtons"]
position = Vector2(-87, -153)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(118, 204, 187, 213, 163, 235)

[node name="XboxControllerA" type="Sprite2D" parent="SelectedPlayerButtons/AttackButton"]
position = Vector2(123, 205)
texture = ExtResource("10_l3amx")
centered = false

[node name="RichTextLabel" type="RichTextLabel" parent="SelectedPlayerButtons/AttackButton"]
offset_left = 138.0
offset_top = 207.0
offset_right = 184.0
offset_bottom = 222.0
theme = ExtResource("2_mbdq8")
text = "Attaquer "
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="SelectedPlayerButtons"]
libraries = {
"": SubResource("AnimationLibrary_venrj")
}

[node name="PlayerInfos" type="Marker2D" parent="."]
position = Vector2(382, 223)

[node name="PlayerInfos2" type="Polygon2D" parent="PlayerInfos"]
position = Vector2(-334, -159)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(328, 192, 336, 160, 392, 152, 424, 160, 416, 192, 360, 200)

[node name="Name" type="RichTextLabel" parent="PlayerInfos/PlayerInfos2"]
offset_left = 338.0
offset_top = 160.0
offset_right = 379.0
offset_bottom = 172.0
theme = ExtResource("5_wgptg")
text = "LePcDeNils"
scroll_active = false

[node name="HPvalue" type="RichTextLabel" parent="PlayerInfos/PlayerInfos2"]
offset_left = 381.0
offset_top = 168.0
offset_right = 423.0
offset_bottom = 181.0
theme = ExtResource("5_wgptg")
theme_override_colors/default_color = Color(0.372549, 0.803922, 0.894118, 1)
text = "???/???HP"
scroll_active = false

[node name="HPbar" type="TextureProgressBar" parent="PlayerInfos/PlayerInfos2"]
offset_left = 336.0
offset_top = 175.0
offset_right = 376.0
offset_bottom = 178.0
texture_under = ExtResource("6_et5yw")
texture_progress = ExtResource("7_cqw2l")

[node name="SPvalue" type="RichTextLabel" parent="PlayerInfos/PlayerInfos2"]
offset_left = 379.0
offset_top = 176.0
offset_right = 417.0
offset_bottom = 189.0
theme = ExtResource("5_wgptg")
theme_override_colors/default_color = Color(0.843137, 0.482353, 0.729412, 1)
text = "???/???SP"
scroll_active = false

[node name="SPbar" type="TextureProgressBar" parent="PlayerInfos/PlayerInfos2"]
offset_left = 334.0
offset_top = 183.0
offset_right = 374.0
offset_bottom = 186.0
texture_under = ExtResource("8_o6e83")
texture_progress = ExtResource("9_1bu58")

[node name="PlayerInfos3" type="Polygon2D" parent="PlayerInfos"]
position = Vector2(-426, -159)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(328, 192, 336, 160, 392, 152, 424, 160, 416, 192, 360, 200)

[node name="Name" type="RichTextLabel" parent="PlayerInfos/PlayerInfos3"]
offset_left = 338.0
offset_top = 160.0
offset_right = 372.0
offset_bottom = 172.0
theme = ExtResource("5_wgptg")
text = "pholder"
scroll_active = false

[node name="HPvalue" type="RichTextLabel" parent="PlayerInfos/PlayerInfos3"]
offset_left = 381.0
offset_top = 168.0
offset_right = 423.0
offset_bottom = 181.0
theme = ExtResource("5_wgptg")
theme_override_colors/default_color = Color(0.372549, 0.803922, 0.894118, 1)
text = "???/???HP"
scroll_active = false

[node name="HPbar" type="TextureProgressBar" parent="PlayerInfos/PlayerInfos3"]
offset_left = 336.0
offset_top = 175.0
offset_right = 376.0
offset_bottom = 178.0
texture_under = ExtResource("6_et5yw")
texture_progress = ExtResource("7_cqw2l")

[node name="SPvalue" type="RichTextLabel" parent="PlayerInfos/PlayerInfos3"]
offset_left = 379.0
offset_top = 176.0
offset_right = 417.0
offset_bottom = 189.0
theme = ExtResource("5_wgptg")
theme_override_colors/default_color = Color(0.843137, 0.482353, 0.729412, 1)
text = "???/???SP"
scroll_active = false

[node name="SPbar" type="TextureProgressBar" parent="PlayerInfos/PlayerInfos3"]
offset_left = 334.0
offset_top = 183.0
offset_right = 374.0
offset_bottom = 186.0
texture_under = ExtResource("8_o6e83")
texture_progress = ExtResource("9_1bu58")

[node name="PlayerInfos4" type="Polygon2D" parent="PlayerInfos"]
position = Vector2(-360, -202)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(328, 192, 336, 160, 392, 152, 424, 160, 416, 192, 360, 200)

[node name="Name" type="RichTextLabel" parent="PlayerInfos/PlayerInfos4"]
offset_left = 338.0
offset_top = 160.0
offset_right = 379.0
offset_bottom = 172.0
theme = ExtResource("5_wgptg")
text = "pholder"
scroll_active = false

[node name="HPvalue" type="RichTextLabel" parent="PlayerInfos/PlayerInfos4"]
offset_left = 381.0
offset_top = 168.0
offset_right = 423.0
offset_bottom = 181.0
theme = ExtResource("5_wgptg")
theme_override_colors/default_color = Color(0.372549, 0.803922, 0.894118, 1)
text = "???/???HP"
scroll_active = false

[node name="HPbar" type="TextureProgressBar" parent="PlayerInfos/PlayerInfos4"]
offset_left = 336.0
offset_top = 175.0
offset_right = 376.0
offset_bottom = 178.0
texture_under = ExtResource("6_et5yw")
texture_progress = ExtResource("7_cqw2l")

[node name="SPvalue" type="RichTextLabel" parent="PlayerInfos/PlayerInfos4"]
offset_left = 379.0
offset_top = 176.0
offset_right = 417.0
offset_bottom = 189.0
theme = ExtResource("5_wgptg")
theme_override_colors/default_color = Color(0.843137, 0.482353, 0.729412, 1)
text = "???/???SP"
scroll_active = false

[node name="SPbar" type="TextureProgressBar" parent="PlayerInfos/PlayerInfos4"]
offset_left = 334.0
offset_top = 183.0
offset_right = 374.0
offset_bottom = 186.0
texture_under = ExtResource("8_o6e83")
texture_progress = ExtResource("9_1bu58")
